move up research experience

--- a/CV.tex
+++ b/CV.tex
@@ -118,6 +118,41 @@ Chalmers University of Technology& Email: mohsenk@chalmers.se\\
 \vspace{0.2cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{0.2cm}
+
+\subsubsection*{PROFESSIONAL EXPERIENCE}
+%
+\begin{tabbing}
+xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
+
+\>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
+%\vspace{0.2cm}
+\textbf{Postdoctoral Researcher} & \textbf{2017 - Present} \\
+Department of Chemistry and Chemical Engineering& \\
+Chalmers University of Technology&
+\end{tabular*}
+\end{tabbing}
+\vspace{-0.18cm}
+\begin{list}{}{}
+\item Working with \href{https://www.chalmers.se/en/staff/Pages/ronnie-andersson.aspx}{Professor Andersson} on developing models for dispersed multiphase flows. The project aims to improve the understanding of droplets and gas bubbles breakup in turbulent flows by developing new kernels for population balance modeling. 
+\end{list}
+
+\begin{tabbing}
+xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
+
+\>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
+%\vspace{0.2cm}
+\textbf{Postdoctoral Researcher} & \textbf{2014 - 2017} \\
+Department of Applied Science and Technology& \\
+Polytechnic University of Turin&
+\end{tabular*}
+\end{tabbing}
+\vspace{-0.18cm}
+
+\begin{list}{}{}
+\item Worked with \href{http://bit.ly/2CYF9sp}{Professor Marchisio} on \quotes{Modelling of Morphology Development of Micro and Nano Structures, \href{https://github.com/karimimp/MoDeNa}{(MoDeNa)}} project. Developed a new solver, \href{https://github.com/karimimp/PUFoam}{\texttt{PUFoam}}, in OpenFOAM based on coupling of PBE with CFD for simulation of reacting expanding polyurethane foams.
+
+\end{list}
+
 \subsubsection*{EDUCATION}
 \vspace{0.2cm}
 
@@ -168,76 +203,6 @@ B. Sc.in Mining Engineering &
 %\item Application of CFD for different engineering fields; formulations and developments of CFD solvers for single and multiphase systems; fundamental studies towards establishing new modelling methodologies for a range of engineering problems encountering in the chemical, mechanical, process and mining engineering; 
 %\end{list}
 
-\subsubsection*{PROFESSIONAL EXPERIENCE}
-%
-\begin{tabbing}
-xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
-
-\>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
-%\vspace{0.2cm}
-\textbf{Postdoctoral Researcher} & \textbf{2017 - Present} \\
-Department of Chemistry and Chemical Engineering& \\
-Chalmers University of Technology&
-\end{tabular*}
-\end{tabbing}
-\vspace{-0.18cm}
-\begin{list}{}{}
-\item Working with \href{https://www.chalmers.se/en/staff/Pages/ronnie-andersson.aspx}{Professor Andersson} on developing models for dispersed multiphase flows. The project aims to improve the understanding of droplets and gas bubbles breakup in turbulent flows by developing new kernels for population balance modeling. 
-\end{list}
-
-\begin{tabbing}
-xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
-
-\>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
-%\vspace{0.2cm}
-\textbf{Postdoctoral Researcher} & \textbf{2014 - 2017} \\
-Department of Applied Science and Technology& \\
-Polytechnic University of Turin&
-\end{tabular*}
-\end{tabbing}
-\vspace{-0.18cm}
-
-\begin{list}{}{}
-\item Worked with \href{http://bit.ly/2CYF9sp}{Professor Marchisio} on \quotes{Modelling of Morphology Development of Micro and Nano Structures, \href{https://github.com/karimimp/MoDeNa}{(MoDeNa)}} project. Developed a new solver, \href{http://www.sciencedirect.com/science/article/pii/S0010465517300978}{\texttt{PUFoam}}, in OpenFOAM based on coupling of PBE with CFD for simulation of reacting expanding polyurethane foams.
-% \item \hspace{16pt}  - Formulating a novel approach based on population balance equation for the simulation of polyurethane foams.
-% \item \hspace{16pt}  - Developing and validating a model prototype for simulation of reacting expanding polyurethane foams, \href{https://github.com/MoDeNa-EUProject/MoDeNa}{(source code)}.
-% \item \hspace{16pt}  - Introducing a new solver, \quotes{\texttt{PUFoam}}, in OpenFOAM CFD code, based on coupling of PBE with CFD.
-% \item \hspace{16pt}  - Providing guidance and mentorship to post graduate students in \quotes{multiscale modelling for materials science and process engineering research group}:	
-% 			\begin{list}{}{}
-% 			\item \hspace{32pt} - Hermes Droghetti; \quotes{\textit{Development of an OpenFOAM solver for polyurethane foams}}.
-% 			\item \hspace{32pt} - Marco Cravero; \quotes{\textit{Testing and validation of a computational fluid dynamics model for polyurethane foams}}.
-% 			\item \hspace{32pt} - Alessandro Concas; \quotes{\textit{Modelling of polyurethane foams with commercial CFD code FLUENT}}.
-%% 1			\item \hspace{32pt} - Osvaldo Dipaolo; \quotes{\textit{ddd}}
-%		\end{list}
-\end{list}
-
-%\begin{tabbing}
-%xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
-%
-%\>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
-%%\vspace{0.2cm}
-%\textbf{Doctoral Research} & \textbf{2010 - 2014} 
-%\end{tabular*}
-%\end{tabbing}
-%\vspace{-0.4cm}
-%
-%\begin{list}{}{}
-%\item Worked with Professor Akdogan and Professor Bradshaw on the development of a CFD model for conventional flotation vessels. A CFD-based methodology was formulated, and validated for the prediction of flotation macro response by integrating the significance of the hydrodynamic flow features into the flotation micro-processes.
-%\end{list}
-%
-%\begin{tabbing}
-%xxxx\=xxxxxxxx\=xxxxxxxx\=xxxxxxxx\=\kill
-%
-%\>\begin{tabular*}{0.97\linewidth}{l@{\extracolsep{\fill}}r}
-%%\vspace{0.2cm}
-%\textbf{Master's Research} & \textbf{2007 - 2009} 
-%\end{tabular*}
-%\end{tabbing}
-%\vspace{-0.4cm}
-%
-%\begin{list}{}{}
-%\item Worked with Professor Dehghani and Professor Talebi on experimental, analytical and computational modelling of hydrocyclones.
-%\end{list}
 
 %\newpage
 \thispagestyle{fancy}
@@ -388,8 +353,6 @@ P. Ferkl, \underline{M. Karimi}, D. L. Marchisio, J. Kosek, \quotes{Introducing 
 	\item \textbf{CFD codes:} Proficient in OpenFOAM and Fluent.
 	\item \textbf{Post-processing:} Proficient in CFD-Post and ParaView.	
 	\item \textbf{Programming:} Proficient in C++ and MATLAB, experienced with Python.
-    \item \textbf{Design of Experiments:} Proficient in Design Expert, MiniTab, Qualitek.
-    \item \textbf{Mineral processing tools:} Experienced with MODSIM, familiar with JKSimMet.
 \end{list}
 
 %\subsection*{LANGUAGES}
