update cv with Ben's paper

--- a/CV.tex
+++ b/CV.tex
@@ -223,6 +223,8 @@ B. Sc.in Mining Engineering &
 \subsubsection*{REFEREED JOURNAL PAPERS}
 
 \begin{enumerate}
+	\item
+B. Oyegbile, G. Akdogan, \underline{M. Karimi}, \quotes{Experimental and CFD Studies of the Hydrodynamics in Wet Agglomeration Process}, \textit{ChemEngineering}, Vol. 2, pp. 1--17, 2018.
 	\item 
 \underline{M. Karimi}, D. L. Marchisio, E. Laurini, M. Fermeglia, S. Pricl, \quotes{Bridging the gap across scales: Coupling CFD and MD/GCMC in polyurethane foam simulation}, \textit{Chemical Engineering Science}, Vol. 178, pp. 39--47, 2018.
 
