update CV with breakup kernels article

--- a/CV.tex
+++ b/CV.tex
@@ -224,6 +224,8 @@ B. Sc.in Mining Engineering &
 
 \begin{enumerate}
 	\item
+\underline{M. Karimi}, R. Andersson, \quotes{An exploratory study of fluid particles breakup rate models for the entire spectrum of turbulent energy}, \textit{Chemical Engineering Science}, Vol. 192, pp. 850--863, 2018.
+	\item
 B. Oyegbile, G. Akdogan, \underline{M. Karimi}, \quotes{Experimental and CFD Studies of the Hydrodynamics in Wet Agglomeration Process}, \textit{ChemEngineering}, Vol. 2, pp. 1--17, 2018.
 	\item 
 \underline{M. Karimi}, D. L. Marchisio, E. Laurini, M. Fermeglia, S. Pricl, \quotes{Bridging the gap across scales: Coupling CFD and MD/GCMC in polyurethane foam simulation}, \textit{Chemical Engineering Science}, Vol. 178, pp. 39--47, 2018.
