fix modena github address

--- a/CV.tex
+++ b/CV.tex
@@ -149,7 +149,7 @@ Polytechnic University of Turin&
 \vspace{-0.18cm}
 
 \begin{list}{}{}
-\item Worked with \href{http://bit.ly/2CYF9sp}{Professor Marchisio} on \quotes{Modelling of Morphology Development of Micro and Nano Structures, \href{https://github.com/karimimp/MoDeNa}{(MoDeNa)}} project. Developed a new solver, \href{https://github.com/karimimp/PUFoam}{\texttt{PUFoam}}, in OpenFOAM based on coupling of PBE with CFD for simulation of reacting expanding polyurethane foams.
+\item Worked with \href{http://bit.ly/2CYF9sp}{Professor Marchisio} on \quotes{Modelling of Morphology Development of Micro and Nano Structures, \href{https://github.com/MoDeNa-EUProject/MoDeNa}{(MoDeNa)}} project. Developed a new solver, \href{https://github.com/karimimp/PUFoam}{\texttt{PUFoam}}, in OpenFOAM based on coupling of PBE with CFD for simulation of reacting expanding polyurethane foams.
 
 \end{list}
 
